feat: complete data cleaning pipeline from raw data to final analysis
MAJOR ACHIEVEMENT: Successfully executed complete data cleaning pipeline from raw JSON data

📊 DATA REDUCTION RESULTS:
- Raw integrated CSV: 119,678 records
- Final cleaned dataset: 80,755 records
- Total reduction: 38,923 records (32.52%)

🔧 PIPELINE STEPS COMPLETED:
1. Raw JSON → Integrated CSV (CSV builder)
2. 6-step data quality pipeline (missing values, duplicates, data types, outliers)
3. NLP text preprocessing (HTML cleaning, text normalization)
4. EDA analysis with before/after visualizations

📁 KEY OUTPUTS:
- outputs/: Complete pipeline execution results and reports (excluding large pickle files)
- src/eda_analysis/outputs/complete_pipeline_analysis/: Final EDA visualizations
- data/processed/: Final cleaned and preprocessed datasets
- logs/: Comprehensive pipeline execution logs

🔧 CODE IMPROVEMENTS:
- Enhanced pipeline_runner.py with absolute imports
- Updated text_preprocessor.py to handle parquet files
- Modified improved_eda_final.py for complete pipeline analysis
- Updated .gitignore to exclude large pickle files

📈 ANALYSIS INSIGHTS:
- Primary reduction: Missing values (38,874 records, 32.5%)
- Minimal outlier impact: 49 records (0.06%)
- No duplicate removal needed
- Text preprocessing: 57 HTML descriptions cleaned
- Final dataset: 80,755 high-quality romance novel records

This completes the full data cleaning pipeline demonstrating significant data quality improvements.

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,10 @@ src/logs/
 *.jpg
 *.jpeg
 *.gif
+outputs/data_type_optimization/*.pickle
+
+# Exclude large pickle files
+*.pkl
+*.pickle
+outputs/*/*.pkl
+outputs/*/*.pickle
