feat: complete repository cleanup and organization
🧹 COMPREHENSIVE CLEANUP COMPLETED:

📁 Repository Organization:
- All outputs centralized in organized_outputs/ directory
- Duplicate files archived in archive/cleanup_20250907/
- Old dataset versions archived (keeping only current ones)
- Old logs and reports archived (superseded by organized structure)

🗂️ Files Cleaned Up:
- Deleted old test outputs and preprocessing reports
- Archived old pipeline outputs and data quality reports
- Moved duplicate outputs to archive
- Updated .gitignore to exclude large files (>100MB)

📊 Current Repository State:
- Clean source code in src/ directory
- Organized outputs in organized_outputs/
- Current datasets in data/processed/ (3 files)
- Complete archive in archive/ directory
- Ready for advanced NLP research

🔧 Large Files Excluded:
- CSV, PKL, PICKLE, PARQUET files excluded from git
- All large files preserved locally for research use
- GitHub-compatible repository size maintained

Repository now clean, organized, and ready for research!

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,9 @@ outputs/data_type_optimization/*.pickle
 *.pickle
 outputs/*/*.pkl
 outputs/*/*.pickle
+
+# Exclude large files that exceed GitHub's 100MB limit
+*.csv
+*.pkl
+*.pickle
+*.parquet
