Add deduplication pipeline with CLI interface
- Created src/deduplication/dedupe_pipeline.py with comprehensive deduplication functionality
- Added Union-Find clustering algorithm for token similarity grouping
- Implemented DuckDB-based filtering for efficient processing
- Added CLI interface with stats, filter, cluster, and all commands
- Updated requirements.txt with pyarrow, duckdb, typer, and psutil dependencies
- Fixed JSON serialization issues for Path and regex objects
- Tested successfully with sample data (10k rows processed in seconds)

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,9 @@ tqdm>=4.64.0
 
 # Jupyter for analysis (if needed)
 jupyter>=1.0.0
+
+# Deduplication pipeline dependencies
+pyarrow>=15.0.0  # for parquet file handling
+duckdb>=0.9.0    # for efficient SQL queries on parquet
+typer[all]>=0.9.0  # for CLI interface
+psutil>=5.9.0    # for memory monitoring
