--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,16 @@ pyarrow>=15.0.0  # for parquet file handling
 duckdb>=0.9.0    # for efficient SQL queries on parquet
 typer[all]>=0.9.0  # for CLI interface
 psutil>=5.9.0    # for memory monitoring
+
+# Shelf normalization and BERTopic pipeline dependencies
+unidecode>=1.3.0  # for unicode normalization
+rapidfuzz>=3.0.0  # for fuzzy string matching
+symspellpy>=6.7.0  # for spelling correction (optional)
+hdbscan>=0.8.0   # for clustering
+scikit-learn>=1.3.0  # for ML utilities and nearest neighbors
+scipy>=1.11.0    # for sparse matrices and scientific computing
+networkx>=3.0    # for graph operations
+sentence-transformers>=2.2.0  # for embeddings
+bertopic>=0.15.0  # for topic modeling
+fastapi>=0.100.0  # for API (optional)
+uvicorn>=0.23.0  # for API server (optional)
