--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ pyarrow>=15.0.0  # for parquet file handling
 duckdb>=0.9.0    # for efficient SQL queries on parquet
 typer[all]>=0.9.0  # for CLI interface
 psutil>=5.9.0    # for memory monitoring
+optuna>=3.0.0    # for hyperparameter optimization
 
 # Shelf normalization and BERTopic pipeline dependencies
 unidecode>=1.3.0  # for unicode normalization
