feat: Add fuzzy text matching system for Goodreads to external datasets
- Create src/text_matching/ module with comprehensive fuzzy matching functionality
- Implement match_goodreads_to_texts.py with RapidFuzz-based title/author matching
- Add run_matcher.py with predefined configurations (default, relaxed, strict)
- Support both Hugging Face datasets and local CSV files
- Include text extraction for datasets like AlekseyKorshuk/romance-books
- Add blocking strategy for efficient large-scale matching
- Update requirements.txt with rapidfuzz, python-Levenshtein, datasets
- Successfully matched 10 books from 52,585 Goodreads books to 3,530 text books
- Achieved 95.0 average composite score with 100% title/author match accuracy

--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,8 @@ optuna>=3.0.0    # for hyperparameter optimization
 # Shelf normalization and BERTopic pipeline dependencies
 unidecode>=1.3.0  # for unicode normalization
 rapidfuzz>=3.0.0  # for fuzzy string matching
+python-Levenshtein>=0.21.0  # for faster fuzzy matching
+datasets>=2.14.0  # for Hugging Face datasets
 symspellpy>=6.7.0  # for spelling correction (optional)
 hdbscan>=0.8.0   # for clustering
 scikit-learn>=1.3.0  # for ML utilities and nearest neighbors
