--- a/src/anna_archive_matcher/requirements.txt
+++ b/src/anna_archive_matcher/requirements.txt
@@ -1,7 +1,5 @@
+duckdb>=0.9.0
 pandas>=2.0.0
 requests>=2.31.0
 tqdm>=4.65.0
-beautifulsoup4>=4.14.0
-lxml>=4.9.0
-urllib3>=1.26.0
-PySocks>=1.7.0
+python-dotenv>=1.0.0
