fix: add visualization images to repository
- Update .gitignore to allow PNG files in outputs/reports directories
- Add all visualization images from corpus_construction/figures and reviews_eda
- Images are now tracked and will display correctly on GitHub
- All images are under 1MB, well within GitHub limits

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,10 @@ src/logs/
 *.jpg
 *.jpeg
 *.gif
+# But include visualization outputs in reports directories
+!outputs/reports/**/*.png
+!outputs/reports/**/*.jpg
+!outputs/reports/**/*.jpeg
 outputs/data_type_optimization/*.pickle
 
 # Exclude large pickle files
